# Preditiva

./: 404.html  README.md  index.html  pyproject.toml  search.html
docs/: mkdocs.yml
docs/docs/: git.md  index.md
git/: index.html
notebooks/: projeto_ds.ipynb
search/: search_index.json
