[tool.poetry]
name = "primeiro-projeto"
version = "0.1.0"
description = ""
authors = ["rogerio <rogerinho.01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "1.2.5"
ipykernel = "6.15.1"
mkdocs = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
